--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "roboto-fontface": "^0.7.0",
     "rxjs": "^5.1.0",
     "sweetalert2": "^6.6.5",
+    "tailwindcss": "^2.1.4",
     "tether": "^1.4.0",
     "typeface-montserrat": "0.0.29",
     "zone.js": "^0.8.4"
